GNOME Bugzilla – Bug 724659
search provider: fix segfault when activating a result
Last modified: 2014-02-19 19:25:00 UTC
SeahorseKeyManager is not a SeahorseWidget anymore, so we can't use seahorse_widget_find() to obtain the singleton. Instead, have seahorse_key_manager_show() store and return it. This also fixes the single-window behavior of GtkApplication.
Created attachment 269574 [details] [review] search provider: fix segfault when activating a result
Thanks. Although this blurs the boundaries between libseahorse/ and src/ that's something we should do anyway. Attachment 269574 [details] pushed as 9aa1fb5 - search provider: fix segfault when activating a result