search provider: fix segfault when activating a result

SeahorseKeyManager is not a SeahorseWidget anymore, so we can't
use seahorse_widget_find() to obtain the singleton. Instead,
have seahorse_key_manager_show() store and return it.
This also fixes the single-window behavior of GtkApplication.

Reviewed-by: Stef Walter <stefw@gnome.org>

https://bugzilla.gnome.org/show_bug.cgi?id=724659